# vanillapdf

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  GotchangPdf.sln  LICENSE.md  LICENSE.txt  README.md  WELCOME.md  gotchangpdf.c.wrapper.test.vcxproj  gotchangpdf.c.wrapper.vcxproj  gotchangpdf.merge.vcxproj  gotchangpdf.merge.vcxproj.filters  gotchangpdf.sln  gotchangpdf.test.vcxproj  gotchangpdf.test.vcxproj.filters  gotchangpdf.vcxproj  gotchangpdf.vcxproj.filters  packages.config  test.vcxproj
lib/: .gitignore  CMakeLists.txt
lib/boost/: .gitignore
lib/boost/lib/: libboost_system-vc120-mt-1_55.lib  libboost_system-vc120-mt-gd-1_55.lib
lib/boost_1_55_0/lib/: libboost_filesystem-vc120-mt-1_55.lib  libboost_iostreams-vc120-mt-1_55.lib  libboost_iostreams-vc120-mt-gd-1_55.lib  libboost_iostreams-vc120-mt-gd-1_552.lib  libboost_zlib-vc120-mt-1_55.lib  libboost_zlib-vc120-mt-gd-1_55.lib
lib/openssl/lib/: libeay32MD.lib  libeay32MDd.lib  ssleay32MD.lib  ssleay32MDd.lib
lib/zlib/: .gitignore
src/gotchangpdf/: CMakeLists.txt  gotchangpdf.natvis  precompiled.h  resources.rc
src/gotchangpdf.merge/: CMakeLists.txt  main.c  merge.h
src/gotchangpdf.test/: CMakeLists.txt  documents.c  files.c  main.c  objects.c  test.c  test.h  utils.c
src/gotchangpdf/basic/: BasicBaseStream.cpp  BasicBaseStream.h  BasicReverseStream.cpp  BasicReverseStream.h  BasicStream.cpp  BasicStream.h  Character.cpp  Character.h  basic_base_stream.cpp  basic_base_stream.h  basic_reverse_stream.cpp  basic_reverse_stream.h  basic_stream.cpp  basic_stream.h  character.cpp  character.h  character.hpp
src/gotchangpdf/contents/: content_fwd.h  content_stream_instruction_base.h  content_stream_objects.cpp  content_stream_objects.h  content_stream_operation_base.h  content_stream_operation_generic.cpp  content_stream_operation_generic.h  content_stream_operations.cpp  content_stream_operations.h  content_stream_operator_base.h  content_stream_operators.h  content_stream_parser.cpp  content_stream_parser.h  content_utils.h
src/gotchangpdf/documents/: Catalog.h  Document.h  catalog.cpp  catalog.h  content_stream.cpp  content_stream.h  contents.cpp  contents.h  high_level_object.cpp  high_level_object.h  page_node.cpp  page_node.h  page_node_utils.cpp  page_node_utils.h  page_object.cpp  page_object.h  page_tree.cpp  page_tree.h  page_tree_node.cpp  page_tree_node.h  resource_dictionary.h  specialized_array.h
src/gotchangpdf/exceptions/: Exception.cpp  Exception.h  InvalidObjectTypeException.cpp  InvalidObjectTypeException.h  exception.cpp  invalid_object_type_exception.cpp  invalid_object_type_exception.h
src/gotchangpdf/files/: File.cpp  File.h  Header.cpp  Header.h  Trailer.cpp  Trailer.h  file.cpp  file.h  header.cpp  header.h  trailer.c  trailer.cpp  trailer.h  xref.cpp  xref.h  xref_chain.h  xref_with_metadata.h
src/gotchangpdf/filters/: Filter.h  FlateDecodeFilter.h  filter.cpp  filter.h  filter.hpp  filter_utils.cpp  filter_utils.h  filter_visitors.h  flate_decode_filter.cpp  flate_decode_filter.h
src/gotchangpdf/implementation/: c_annotations.cpp  c_array_object.cpp  c_boolean_object.cpp  c_buffer.cpp  c_catalog.cpp  c_character_map.cpp  c_contents.cpp  c_date.cpp  c_destinations.cpp  c_developer_extensions.cpp  c_dictionary_object.cpp  c_digital_signature.cpp  c_document.cpp  c_document_info.cpp  c_document_signature_settings.cpp  c_encryption.cpp  c_errors.cpp  c_fields.cpp  c_file.cpp  c_file_writer.cpp  c_font.cpp  c_font_map.cpp  c_helper.h  c_indirect_object.cpp  c_indirect_object_reference.cpp  c_integer_object.cpp  c_interactive_forms.cpp  c_library_info.cpp  c_license_info.cpp  c_logging.cpp  c_name_object.cpp  c_null_object.cpp  c_object.cpp  c_outline.cpp  c_page_labels.cpp  c_page_object.cpp  c_page_tree.cpp  c_pkcs12_key.cpp  c_real_object.cpp  c_rectangle.cpp  (+8 more)
src/gotchangpdf/lexical/: LexicalBaseStream.cpp  LexicalBaseStream.h  LexicalReverseStream.cpp  LexicalReverseStream.h  LexicalStream.cpp  LexicalStream.h  LexicalTree.cpp  LexicalTree.h  Parser.cpp  Parser.h  Token.cpp  Token.h  TokenDictionary.cpp  TokenDictionary.h  abstract_syntax_tree.cpp  abstract_syntax_tree.h  clipping_path_grammar.cpp  color_grammar.cpp  compatibility_grammar.cpp  content_stream_grammar.cpp  content_stream_grammar.h  content_stream_operations.h  content_stream_operator_grammar.cpp  content_stream_operator_grammar.h  content_stream_simple_operators.cpp  deferred.h  file_position.h  general_graphics_state_grammar.cpp  inline_image_grammar.cpp  iter_offset_parser.h  lexical_base_stream.cpp  lexical_base_stream.h  lexical_reverse_stream.cpp  lexical_reverse_stream.h  lexical_stream.cpp  lexical_stream.h  lexical_tree.cpp  lexical_tree.h  marked_content_grammar.cpp  object_stream_grammar.cpp  (+33 more)
src/gotchangpdf/raw/: RawBaseStream.cpp  RawBaseStream.h  RawReverseStream.cpp  RawReverseStream.h  RawStream.cpp  RawStream.h  character.cpp  character.h  raw_base_stream.cpp  raw_base_stream.h  raw_reverse_stream.cpp  raw_reverse_stream.h  raw_stream.cpp  raw_stream.h
src/gotchangpdf/util/: Buffer.cpp  Buffer.h  Constants.h  Version.h  bind.h  buffer.cpp  buffer.h  character_device.h  character_sink.h  constants.h  deferred.h  file_device.h  fwd.h  fwd.hpp  hasher.cpp  hasher.h  intrusive.h  log.h  operators.h  (+5 more)
src/vanillapdf/: CMakeLists.txt  precompiled.h  public.natvis  resources.rc  unistd.h  vanillapdf.natvis
src/vanillapdf.benchmark/: CMakeLists.txt  benchmark.h  main.cpp  objects.cpp
src/vanillapdf.filter/: CMakeLists.txt  filter.h  main.c
src/vanillapdf.merge/: CMakeLists.txt  main.c  merge.h
src/vanillapdf.test/: CMakeLists.txt  documents.c  files.c  main.c  objects.c  resources.rc  test.h  utils.c
src/vanillapdf.tools/: CMakeLists.txt  decrypt.c  encrypt.c  extract.c  extract_object.c  filter.c  main.c  merge.c  resources.rc  sign.c  sign_custom.c  tools.h  write_custom.c
src/vanillapdf.unittest/: CMakeLists.txt  attributes_test.cpp  document_test.cpp  filter_test.cpp  main.cpp  test_environment.cpp  unittest.h
(+1345 files in other folders)
